--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,9 @@ on:
       - main
       - dev
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches:
+      - main
+    
 jobs:
   sonarcloud:
     name: SonarCloud
@@ -18,10 +20,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
-      - name: Install tox and any other packages
-        run: pip install tox
-      - name: Run tox
-        run: tox -e py
+      - name: Install dependencies
+        run: pip install -U pytest
+      - name: Run tests and coverage
+        run: pytest --cov --cov-report=xml
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
