--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
       - name: Install dependencies
-        run: pip install -U pytest
+        run: pip install pytest pytest-cov
       - name: Run tests and coverage
         run: pytest --cov --cov-report=xml
       - name: SonarCloud Scan
